# portfolio

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  tsconfig.json
backend/: 0.2.27  Dockerfile  pyproject.toml  test.py
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/api/v1/chat/: router.py
backend/app/api/v1/ecommerce_rag/: chat_handler.py  handlers.py  intent_classifier.py  llm_rewrite.py  query_classifier.py  router.py
backend/app/api/v1/ecommerce_rag/context/: context.py
backend/app/api/v1/ecommerce_rag/llm_handlers/: open_ai_handler.py
backend/app/api/v1/product_search/: router.py
backend/app/api/v1/qa/: router.py
backend/app/api/v1/search/: router.py
backend/app/api/v1/search/product/: router.py
backend/app/api/v1/search/reveiw/: router.py
backend/app/api/v1/summary/: router.py
backend/app/api/v2/: routes.py
backend/app/api/v2/llm/: router.py
backend/app/api/v2/llm/chat/: chat.py
backend/app/api/v2/product/: router.py
backend/app/api/v2/review/: router.py
backend/app/api/v2/skincare_gpt/: router.py
backend/app/api/v2/test/: router.py
backend/app/collections/: create_product_collection.py
backend/app/collections/product/: dump.py  dump_collection.py
backend/app/collections/review/: create.py  diagnostics.py  dump.py
backend/app/core/ecommerce_rag/: context_aware_response.py  query_classifier.py
backend/app/core/ner_topic_extract/rule_based/: fuzzy_match.py  rule_based_ner.py
backend/app/core/ner_topic_extract/semantics_ner/: semantics_ner.py
backend/app/core/ner_topic_extract/trained_ner/: trained_ner.py
backend/app/core/ner_topic_extract/zero_shot/: openai_zero_shot.py
backend/app/core/preprocessing/embedding/: open_ai.py
backend/app/core/services/vector_search/: query.py
backend/app/db/: milvus.py  postgres.py  qdrant.py  redis.py
backend/app/embedding/: open_ai.py
backend/app/middlewares/: logging.py
backend/app/mivus_collections/product/: create.py  dump.py
backend/app/mivus_collections/review/: diagnostics.py  dump.py
backend/app/models/: milvus.py  product.py  review.py
backend/app/models/api/: context.py  ner.py
backend/app/models/pg/: metedata.py  product.py  review.py  sephora.py  sephora_product.py  session.py  user.py
backend/app/models/qdrant/: base.py  product.py  review.py
backend/app/services/: chat.py
backend/app/services/huggingface/: qa.py
backend/app/services/vector_search/: query.py
backend/tests/: test_context.py
data/: 2.11.25 dev blog.md  (+21 more)
(+73 files in other folders)
